--- a/css/jquery-ui.css
+++ b/css/jquery-ui.css
@@ -1443,9 +1443,10 @@ a.ui-button:active,
 	border-radius: 100%;
 	color: var(--color-white);
 }
+.ui-datepicker td.ui-datepicker-week-end:last-child a.ui-state-active,
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {
 	background-color: var(--color-blue);
-	font-weight: 500;
+	font-weight: 500; color: var(--color-white);
 	border-radius: 100%;
 	color: var(--color-white);
 }
